@@ -10,6 +10,12 @@ description here
 ====================================================================================
 
 ******************************************
+CHANGELOG: 21-11-2011 MPB
+Re-arrange FrSky telemetry structures
+Add FrSky battery capacity used function
+Fix DSM2 problems, improve pulse generation interrupt latency
+
+******************************************
 CHANGELOG: 21-11-2011 RFT
 Updated audio.cpp & audio.h to include the fancy frsky alert souunds
 Updated menu.cpp to show menu for fancy sounds
